Complete link flow

--- a/src/BonsaiBalance.Web/ClientApp/src/app/components/plaid-link/plaid-link.component.html
+++ b/src/BonsaiBalance.Web/ClientApp/src/app/components/plaid-link/plaid-link.component.html
@@ -13,3 +13,4 @@
         (Click)="onPlaidClick($event)"
     ></mr-ngx-plaid-link-button>
 </div>
+<div *ngIf="success">Successfully linked account!</div>
