--- a/src/BonsaiBalance.Web/ClientApp/src/app/app.component.html
+++ b/src/BonsaiBalance.Web/ClientApp/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p>It works!</p>
+<div class="btn btn-primary">Bootstrap Button</div>
 <router-outlet></router-outlet>
 <app-plaid-link></app-plaid-link>
